# Astro-code

./: LICENSE.txt  README.md  data.py  galaxy_sed  galaxysed.py  load_data.py  pyproject.toml  sed_plot.py
docs/: conf.py  galaxy_sed.rst  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  sed_plot.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sed_plot.html
docs/_build/html/_sources/: sed_plot.rst.txt
galaxy_sed/: __init__.py  data.py  loadData_sdss.py  sed_filters.py
galaxy_sed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: end2end_test.py  test_data.py  test_loadData_sdss.py  test_sed_filters.py  test_sed_plot.py
